--- a/src/App.css
+++ b/src/App.css
@@ -7,11 +7,6 @@
   pointer-events: none;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
 
 .App-header {
   background-color: #282c34;
@@ -28,11 +23,34 @@
   color: #61dafb;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+
+
+.sidenav {
+  width: 300px;
+  height: 100vh;
+  position: fixed;
+  z-index: 1;
+  background: #eee;
+  overflow-x: hidden;
+  padding: 8px 0;
+  margin: 10px;
+  
+}
+
+.sidenav p{
+  font-size: large;
+  padding: 2px, 1px, 2px, 5px;
+  text-align: center;
+  text-decoration: none;
+  display: block;
+  color: #0040ff;
+}
+
+.sidenav a {
+  padding: 6px 8px 6px 16px;
+  text-decoration: none;
+  font-size: 25px;
+  color: #0040ff;
+  display: block;
+  text-align: center;
 }
