--- a/src/components/Sidebar.css
+++ b/src/components/Sidebar.css
@@ -1,8 +1,8 @@
 .sidebar {
-    width: 300px;
+  width: 300px;
   height: 100vh;
   position: sticky;
-  top: 0;
+  top: 0px;
   z-index: 1;
   background: #eee;
   overflow-x: hidden;
