Project.js editted

--- a/src/components/Cell.css
+++ b/src/components/Cell.css
@@ -1,8 +1,9 @@
 .cell {
     color: aqua;
-    border: 2px;
+    border: 10px;
+    margin: 10px;
     background-color: rgb(189, 184, 178);
-
+    
 }
 
 .cell h3 {
