--- a/src/pages/page.css
+++ b/src/pages/page.css
@@ -3,11 +3,12 @@
     position: static;
     left: 500px;
     padding-top: 0%;
-    
+    border: 20px;
     text-align: center;
   }
 
 .page h1 {
     display: flex;
     text-align: center;
+    border: 50px;
 }
